--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,18 @@
 	<description>Belajar Vault dengan Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring-vault.version>2.3.1</spring-vault.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.vault</groupId>
+			<artifactId>spring-vault-core</artifactId>
+			<version>${spring-vault.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
