implement encrypted member service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=belajar-vault
 
 vault.uri=http://localhost:8200
-vault.token=s.i4cnIV0dNXhUbazeIFShZam8
+vault.token=s.5KOe4hemmmNflUmVT5H4RFDY
+
+file.upload.folder=${user.home}/tmp/belajar-vault-upload
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
