fix link untuk membuka database dan folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ vault.token=s.5KOe4hemmmNflUmVT5H4RFDY
 
 file.upload.folder=${user.home}/tmp/belajar-vault-upload
 
+spring.datasource.url=jdbc:h2:mem:belajarvaultdb
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
