--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=belajar-vault
+spring.application.name=belajar-enkripsi
 
 vault.uri=http://localhost:8200
-vault.token=s.5KOe4hemmmNflUmVT5H4RFDY
+vault.token=hvs.CyGee9nhOFoYyMcGCxwZLo48
 
-file.upload.folder=${user.home}/tmp/belajar-vault-upload
+file.upload.folder=${user.home}/tmp/belajar-enkripsi-upload
 
-spring.datasource.url=jdbc:h2:mem:belajarvaultdb
+spring.datasource.url=jdbc:h2:mem:belajarenkripsidb
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
