--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ vault.uri=http://localhost:8200
 vault.token=hvs.CyGee9nhOFoYyMcGCxwZLo48
 
 file.upload.folder=${user.home}/tmp/belajar-enkripsi-upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.datasource.url=jdbc:h2:mem:belajarenkripsidb
 spring.jpa.hibernate.ddl-auto=validate
