upgrade spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.port=12345
 spring.application.name=belajar-enkripsi
 
 vault.uri=http://localhost:8200
-vault.token=hvs.CyGee9nhOFoYyMcGCxwZLo48
+vault.token=token-development-123
 
 file.upload.folder=${user.home}/tmp/belajar-enkripsi-upload
 spring.servlet.multipart.max-file-size=10MB
